--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+    background-color: wheat;
 }
 
 h2 {
@@ -38,16 +38,19 @@ h2 {
     justify-content: center;
     margin-bottom: 20px;
     gap: 300px;
+    background-color:wheat;
 }
 .group2{
     display: flex;
     flex-direction: column;
+    background-color: wheat;
 }
 
 .group3{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: wheat;
 }
 form select, form input, form button {
     padding: 10px;
@@ -59,7 +62,6 @@ form select, form input, form button {
 button {
     background-color: #0000FF;
     color: #fff;
-    border: none;
     cursor: pointer;
     margin: 10px;
     padding: 10px;
